content/_generated-doc/2.13/config/quarkus-redis-client-config-redis-config.adoc

:summaryTableId: quarkus-redis-client-config-redis-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-redis-client-config-redis-config_configuration]]link:#quarkus-redis-client-config-redis-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-redis-client-config-redis-config_quarkus.redis.hosts]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.hosts[quarkus.redis.hosts]`

[.description]
--
The redis hosts to use while connecting to the redis server. Only the cluster and sentinel modes will consider more than 1 element. 
The URI provided uses the following schema `redis://++[++username:password@++][++host++][++:port++][++/database++]++` Use `quarkus.redis.hosts-provider-name` to provide the hosts programmatically.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of link:https://docs.oracle.com/javase/8/docs/api/java/net/URI.html[URI]
 
|`redis://localhost:6379`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.hosts-provider-name]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.hosts-provider-name[quarkus.redis.hosts-provider-name]`

[.description]
--
The hosts provider bean name. 
It is the `&++#++64;Named` value of the hosts provider bean. It is used to discriminate if multiple `io.quarkus.redis.client.RedisHostsProvider` beans are available. 
Used when `quarkus.redis.hosts` is not set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_HOSTS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_HOSTS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.timeout[quarkus.redis.timeout]`

[.description]
--
The maximum delay to wait before a blocking command to redis server times out

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.client-type]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.client-type[quarkus.redis.client-type]`

[.description]
--
The redis client type. Accepted values are: `STANDALONE` (default), `CLUSTER`, `REPLICATION`, `SENTINEL`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_CLIENT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_CLIENT_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`standalone`, `sentinel`, `cluster`, `replication` 
|`standalone`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.master-name]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.master-name[quarkus.redis.master-name]`

[.description]
--
The master name (only considered in HA mode).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_MASTER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_MASTER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`my-master`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.role]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.role[quarkus.redis.role]`

[.description]
--
The role name (only considered in Sentinel / HA mode). Accepted values are: `MASTER`, `REPLICA`, `SENTINEL`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_ROLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_ROLE+++`
endif::add-copy-button-to-env-var[]
-- a|
`master`, `replica`, `sentinel` 
|`master`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.replicas]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.replicas[quarkus.redis.replicas]`

[.description]
--
Whether to use replicas nodes (only considered in Cluster mode). Accepted values are: `ALWAYS`, `NEVER`, `SHARE`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_REPLICAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_REPLICAS+++`
endif::add-copy-button-to-env-var[]
-- a|
`never`, `share`, `always` 
|`never`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.password[quarkus.redis.password]`

[.description]
--
The default password for cluster/sentinel connections. 
If not set it will try to extract the value from the current default `++#++hosts`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.max-pool-size]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.max-pool-size[quarkus.redis.max-pool-size]`

[.description]
--
The maximum size of the connection pool. When working with cluster or sentinel. 
This value should be at least the total number of cluster member (or number of sentinels {plus} 1)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_MAX_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_MAX_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`6`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.max-pool-waiting]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.max-pool-waiting[quarkus.redis.max-pool-waiting]`

[.description]
--
The maximum waiting requests for a connection from the pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_MAX_POOL_WAITING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_MAX_POOL_WAITING+++`
endif::add-copy-button-to-env-var[]
--|int 
|`24`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.pool-cleaner-interval]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.pool-cleaner-interval[quarkus.redis.pool-cleaner-interval]`

[.description]
--
The duration indicating how often should the connection pool cleaner executes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_POOL_CLEANER_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_POOL_CLEANER_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.pool-recycle-timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.pool-recycle-timeout[quarkus.redis.pool-recycle-timeout]`

[.description]
--
The timeout for a connection recycling.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_POOL_RECYCLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_POOL_RECYCLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`15S`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.max-waiting-handlers]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.max-waiting-handlers[quarkus.redis.max-waiting-handlers]`

[.description]
--
Sets how many handlers is the client willing to queue. 
The client will always work on pipeline mode, this means that messages can start queueing. Using this configuration option, you can control how much backlog you're willing to accept.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_MAX_WAITING_HANDLERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_MAX_WAITING_HANDLERS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`2048`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.max-nested-arrays]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.max-nested-arrays[quarkus.redis.max-nested-arrays]`

[.description]
--
Tune how much nested arrays are allowed on a redis response. This affects the parser performance.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_MAX_NESTED_ARRAYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_MAX_NESTED_ARRAYS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`32`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.reconnect-attempts]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.reconnect-attempts[quarkus.redis.reconnect-attempts]`

[.description]
--
The number of reconnection attempts when a pooled connection cannot be established on first try.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_RECONNECT_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_RECONNECT_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.reconnect-interval]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.reconnect-interval[quarkus.redis.reconnect-interval]`

[.description]
--
The interval between reconnection attempts when a pooled connection cannot be established on first try.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_RECONNECT_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_RECONNECT_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.protocol-negotiation]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.protocol-negotiation[quarkus.redis.protocol-negotiation]`

[.description]
--
Should the client perform ++{++@code RESP protocol negotiation during the connection handshake.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_PROTOCOL_NEGOTIATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_PROTOCOL_NEGOTIATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.hosts]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.hosts[quarkus.redis."redis-client-name".hosts]`

[.description]
--
The redis hosts to use while connecting to the redis server. Only the cluster and sentinel modes will consider more than 1 element. 
The URI provided uses the following schema `redis://++[++username:password@++][++host++][++:port++][++/database++]++` Use `quarkus.redis.hosts-provider-name` to provide the hosts programmatically.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of link:https://docs.oracle.com/javase/8/docs/api/java/net/URI.html[URI]
 
|`redis://localhost:6379`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.hosts-provider-name]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.hosts-provider-name[quarkus.redis."redis-client-name".hosts-provider-name]`

[.description]
--
The hosts provider bean name. 
It is the `&++#++64;Named` value of the hosts provider bean. It is used to discriminate if multiple `io.quarkus.redis.client.RedisHostsProvider` beans are available. 
Used when `quarkus.redis.hosts` is not set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__HOSTS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__HOSTS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.timeout[quarkus.redis."redis-client-name".timeout]`

[.description]
--
The maximum delay to wait before a blocking command to redis server times out

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.client-type]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.client-type[quarkus.redis."redis-client-name".client-type]`

[.description]
--
The redis client type. Accepted values are: `STANDALONE` (default), `CLUSTER`, `REPLICATION`, `SENTINEL`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__CLIENT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__CLIENT_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`standalone`, `sentinel`, `cluster`, `replication` 
|`standalone`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.master-name]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.master-name[quarkus.redis."redis-client-name".master-name]`

[.description]
--
The master name (only considered in HA mode).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__MASTER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__MASTER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`my-master`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.role]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.role[quarkus.redis."redis-client-name".role]`

[.description]
--
The role name (only considered in Sentinel / HA mode). Accepted values are: `MASTER`, `REPLICA`, `SENTINEL`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__ROLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__ROLE+++`
endif::add-copy-button-to-env-var[]
-- a|
`master`, `replica`, `sentinel` 
|`master`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.replicas]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.replicas[quarkus.redis."redis-client-name".replicas]`

[.description]
--
Whether to use replicas nodes (only considered in Cluster mode). Accepted values are: `ALWAYS`, `NEVER`, `SHARE`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__REPLICAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__REPLICAS+++`
endif::add-copy-button-to-env-var[]
-- a|
`never`, `share`, `always` 
|`never`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.password[quarkus.redis."redis-client-name".password]`

[.description]
--
The default password for cluster/sentinel connections. 
If not set it will try to extract the value from the current default `++#++hosts`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.max-pool-size]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.max-pool-size[quarkus.redis."redis-client-name".max-pool-size]`

[.description]
--
The maximum size of the connection pool. When working with cluster or sentinel. 
This value should be at least the total number of cluster member (or number of sentinels {plus} 1)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__MAX_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__MAX_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`6`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.max-pool-waiting]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.max-pool-waiting[quarkus.redis."redis-client-name".max-pool-waiting]`

[.description]
--
The maximum waiting requests for a connection from the pool.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__MAX_POOL_WAITING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__MAX_POOL_WAITING+++`
endif::add-copy-button-to-env-var[]
--|int 
|`24`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.pool-cleaner-interval]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.pool-cleaner-interval[quarkus.redis."redis-client-name".pool-cleaner-interval]`

[.description]
--
The duration indicating how often should the connection pool cleaner executes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__POOL_CLEANER_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__POOL_CLEANER_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.pool-recycle-timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.pool-recycle-timeout[quarkus.redis."redis-client-name".pool-recycle-timeout]`

[.description]
--
The timeout for a connection recycling.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__POOL_RECYCLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__POOL_RECYCLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`15S`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.max-waiting-handlers]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.max-waiting-handlers[quarkus.redis."redis-client-name".max-waiting-handlers]`

[.description]
--
Sets how many handlers is the client willing to queue. 
The client will always work on pipeline mode, this means that messages can start queueing. Using this configuration option, you can control how much backlog you're willing to accept.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__MAX_WAITING_HANDLERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__MAX_WAITING_HANDLERS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`2048`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.max-nested-arrays]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.max-nested-arrays[quarkus.redis."redis-client-name".max-nested-arrays]`

[.description]
--
Tune how much nested arrays are allowed on a redis response. This affects the parser performance.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__MAX_NESTED_ARRAYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__MAX_NESTED_ARRAYS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`32`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.reconnect-attempts]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.reconnect-attempts[quarkus.redis."redis-client-name".reconnect-attempts]`

[.description]
--
The number of reconnection attempts when a pooled connection cannot be established on first try.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__RECONNECT_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__RECONNECT_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`0`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.reconnect-interval]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.reconnect-interval[quarkus.redis."redis-client-name".reconnect-interval]`

[.description]
--
The interval between reconnection attempts when a pooled connection cannot be established on first try.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__RECONNECT_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__RECONNECT_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`1S`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.protocol-negotiation]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.protocol-negotiation[quarkus.redis."redis-client-name".protocol-negotiation]`

[.description]
--
Should the client perform ++{++@code RESP protocol negotiation during the connection handshake.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__PROTOCOL_NEGOTIATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__PROTOCOL_NEGOTIATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


h|[[quarkus-redis-client-config-redis-config_quarkus.redis.tcp-tcp-config]]link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp-tcp-config[TCP config]

h|Type
h|Default

a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.alpn]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.alpn[quarkus.redis.tcp.alpn]`

[.description]
--
Set the ALPN usage.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_ALPN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_ALPN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.application-layer-protocols]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.application-layer-protocols[quarkus.redis.tcp.application-layer-protocols]`

[.description]
--
Sets the list of application-layer protocols to provide to the server during the `Application-Layer Protocol Negotiation`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_APPLICATION_LAYER_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_APPLICATION_LAYER_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.secure-transport-protocols]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.secure-transport-protocols[quarkus.redis.tcp.secure-transport-protocols]`

[.description]
--
Sets the list of enabled SSL/TLS protocols.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_SECURE_TRANSPORT_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_SECURE_TRANSPORT_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.idle-timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.idle-timeout[quarkus.redis.tcp.idle-timeout]`

[.description]
--
Set the idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.connection-timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.connection-timeout[quarkus.redis.tcp.connection-timeout]`

[.description]
--
Set the connect timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.non-proxy-hosts]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.non-proxy-hosts[quarkus.redis.tcp.non-proxy-hosts]`

[.description]
--
Set a list of remote hosts that are not proxied when the client is configured to use a proxy.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_NON_PROXY_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_NON_PROXY_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.read-idle-timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.read-idle-timeout[quarkus.redis.tcp.read-idle-timeout]`

[.description]
--
Set the read idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_READ_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_READ_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.receive-buffer-size]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.receive-buffer-size[quarkus.redis.tcp.receive-buffer-size]`

[.description]
--
Set the TCP receive buffer size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_RECEIVE_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_RECEIVE_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.reconnect-attempts]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.reconnect-attempts[quarkus.redis.tcp.reconnect-attempts]`

[.description]
--
Set the value of reconnect attempts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_RECONNECT_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_RECONNECT_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.reconnect-interval]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.reconnect-interval[quarkus.redis.tcp.reconnect-interval]`

[.description]
--
Set the reconnect interval.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_RECONNECT_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_RECONNECT_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.reuse-address]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.reuse-address[quarkus.redis.tcp.reuse-address]`

[.description]
--
Whether to reuse the address.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_REUSE_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_REUSE_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.reuse-port]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.reuse-port[quarkus.redis.tcp.reuse-port]`

[.description]
--
Whether to reuse the port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_REUSE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_REUSE_PORT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.send-buffer-size]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.send-buffer-size[quarkus.redis.tcp.send-buffer-size]`

[.description]
--
Set the TCP send buffer size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_SEND_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_SEND_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.so-linger]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.so-linger[quarkus.redis.tcp.so-linger]`

[.description]
--
Set the `SO_linger` keep alive duration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_SO_LINGER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_SO_LINGER+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.cork]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.cork[quarkus.redis.tcp.cork]`

[.description]
--
Enable the `TCP_CORK` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_CORK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_CORK+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.fast-open]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.fast-open[quarkus.redis.tcp.fast-open]`

[.description]
--
Enable the `TCP_FASTOPEN` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_FAST_OPEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_FAST_OPEN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.keep-alive]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.keep-alive[quarkus.redis.tcp.keep-alive]`

[.description]
--
Set whether keep alive is enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_KEEP_ALIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_KEEP_ALIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.no-delay]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.no-delay[quarkus.redis.tcp.no-delay]`

[.description]
--
Set whether no delay is enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_NO_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_NO_DELAY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.quick-ack]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.quick-ack[quarkus.redis.tcp.quick-ack]`

[.description]
--
Enable the `TCP_QUICKACK` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_QUICK_ACK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_QUICK_ACK+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.traffic-class]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.traffic-class[quarkus.redis.tcp.traffic-class]`

[.description]
--
Set the value of traffic class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_TRAFFIC_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_TRAFFIC_CLASS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.write-idle-timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.write-idle-timeout[quarkus.redis.tcp.write-idle-timeout]`

[.description]
--
Set the write idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_WRITE_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_WRITE_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.local-address]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.local-address[quarkus.redis.tcp.local-address]`

[.description]
--
Set the local interface to bind for network connections. When the local address is null, it will pick any local address, the default local address is null.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_LOCAL_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_LOCAL_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.alpn]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.alpn[quarkus.redis."redis-client-name".tcp.alpn]`

[.description]
--
Set the ALPN usage.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_ALPN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_ALPN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.application-layer-protocols]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.application-layer-protocols[quarkus.redis."redis-client-name".tcp.application-layer-protocols]`

[.description]
--
Sets the list of application-layer protocols to provide to the server during the `Application-Layer Protocol Negotiation`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_APPLICATION_LAYER_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_APPLICATION_LAYER_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.secure-transport-protocols]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.secure-transport-protocols[quarkus.redis."redis-client-name".tcp.secure-transport-protocols]`

[.description]
--
Sets the list of enabled SSL/TLS protocols.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SECURE_TRANSPORT_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SECURE_TRANSPORT_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.idle-timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.idle-timeout[quarkus.redis."redis-client-name".tcp.idle-timeout]`

[.description]
--
Set the idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.connection-timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.connection-timeout[quarkus.redis."redis-client-name".tcp.connection-timeout]`

[.description]
--
Set the connect timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.non-proxy-hosts]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.non-proxy-hosts[quarkus.redis."redis-client-name".tcp.non-proxy-hosts]`

[.description]
--
Set a list of remote hosts that are not proxied when the client is configured to use a proxy.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_NON_PROXY_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_NON_PROXY_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.read-idle-timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.read-idle-timeout[quarkus.redis."redis-client-name".tcp.read-idle-timeout]`

[.description]
--
Set the read idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_READ_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_READ_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.receive-buffer-size]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.receive-buffer-size[quarkus.redis."redis-client-name".tcp.receive-buffer-size]`

[.description]
--
Set the TCP receive buffer size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECEIVE_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECEIVE_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.reconnect-attempts]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.reconnect-attempts[quarkus.redis."redis-client-name".tcp.reconnect-attempts]`

[.description]
--
Set the value of reconnect attempts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECONNECT_ATTEMPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECONNECT_ATTEMPTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.reconnect-interval]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.reconnect-interval[quarkus.redis."redis-client-name".tcp.reconnect-interval]`

[.description]
--
Set the reconnect interval.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECONNECT_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_RECONNECT_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.reuse-address]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.reuse-address[quarkus.redis."redis-client-name".tcp.reuse-address]`

[.description]
--
Whether to reuse the address.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_REUSE_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_REUSE_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.reuse-port]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.reuse-port[quarkus.redis."redis-client-name".tcp.reuse-port]`

[.description]
--
Whether to reuse the port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_REUSE_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_REUSE_PORT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.send-buffer-size]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.send-buffer-size[quarkus.redis."redis-client-name".tcp.send-buffer-size]`

[.description]
--
Set the TCP send buffer size.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SEND_BUFFER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SEND_BUFFER_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.so-linger]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.so-linger[quarkus.redis."redis-client-name".tcp.so-linger]`

[.description]
--
Set the `SO_linger` keep alive duration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SO_LINGER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_SO_LINGER+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.cork]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.cork[quarkus.redis."redis-client-name".tcp.cork]`

[.description]
--
Enable the `TCP_CORK` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_CORK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_CORK+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.fast-open]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.fast-open[quarkus.redis."redis-client-name".tcp.fast-open]`

[.description]
--
Enable the `TCP_FASTOPEN` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_FAST_OPEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_FAST_OPEN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.keep-alive]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.keep-alive[quarkus.redis."redis-client-name".tcp.keep-alive]`

[.description]
--
Set whether keep alive is enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_KEEP_ALIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_KEEP_ALIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.no-delay]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.no-delay[quarkus.redis."redis-client-name".tcp.no-delay]`

[.description]
--
Set whether no delay is enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_NO_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_NO_DELAY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.quick-ack]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.quick-ack[quarkus.redis."redis-client-name".tcp.quick-ack]`

[.description]
--
Enable the `TCP_QUICKACK` option - only with linux native transport.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_QUICK_ACK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_QUICK_ACK+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.traffic-class]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.traffic-class[quarkus.redis."redis-client-name".tcp.traffic-class]`

[.description]
--
Set the value of traffic class.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_TRAFFIC_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_TRAFFIC_CLASS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.write-idle-timeout]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.write-idle-timeout[quarkus.redis."redis-client-name".tcp.write-idle-timeout]`

[.description]
--
Set the write idle timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_WRITE_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_WRITE_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.local-address]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.local-address[quarkus.redis."redis-client-name".tcp.local-address]`

[.description]
--
Set the local interface to bind for network connections. When the local address is null, it will pick any local address, the default local address is null.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_LOCAL_ADDRESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_LOCAL_ADDRESS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


h|[[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options-set-proxy-options-for-connections-via-connect-proxy]]link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options-set-proxy-options-for-connections-via-connect-proxy[Set proxy options for connections via CONNECT proxy]
This configuration section is optional
h|Type
h|Default

a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options.username]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options.username[quarkus.redis.tcp.proxy-options.username]`

[.description]
--
Set proxy username.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options.password[quarkus.redis.tcp.proxy-options.password]`

[.description]
--
Set proxy password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options.port]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options.port[quarkus.redis.tcp.proxy-options.port]`

[.description]
--
Set proxy port. Defaults to 3128.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`3128`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options.host]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options.host[quarkus.redis.tcp.proxy-options.host]`

[.description]
--
Set proxy host.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options.type]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tcp.proxy-options.type[quarkus.redis.tcp.proxy-options.type]`

[.description]
--
Set proxy type. Accepted values are: `HTTP` (default), `SOCKS4` and `SOCKS5`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TCP_PROXY_OPTIONS_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`http`, `socks4`, `socks5` 
|`http`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.username]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.username[quarkus.redis."redis-client-name".tcp.proxy-options.username]`

[.description]
--
Set proxy username.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.password[quarkus.redis."redis-client-name".tcp.proxy-options.password]`

[.description]
--
Set proxy password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.port]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.port[quarkus.redis."redis-client-name".tcp.proxy-options.port]`

[.description]
--
Set proxy port. Defaults to 3128.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`3128`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.host]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.host[quarkus.redis."redis-client-name".tcp.proxy-options.host]`

[.description]
--
Set proxy host.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.type]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tcp.proxy-options.type[quarkus.redis."redis-client-name".tcp.proxy-options.type]`

[.description]
--
Set proxy type. Accepted values are: `HTTP` (default), `SOCKS4` and `SOCKS5`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TCP_PROXY_OPTIONS_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`http`, `socks4`, `socks5` 
|`http`


h|[[quarkus-redis-client-config-redis-config_quarkus.redis.tls-ssl-tls-config]]link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls-ssl-tls-config[SSL/TLS config]

h|Type
h|Default

a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.enabled]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.enabled[quarkus.redis.tls.enabled]`

[.description]
--
Whether SSL/TLS is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-all]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-all[quarkus.redis.tls.trust-all]`

[.description]
--
Enable trusting all certificates. Disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_TRUST_ALL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_TRUST_ALL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-pem]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-pem[quarkus.redis.tls.trust-certificate-pem]`

[.description]
--
PEM Trust config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-pem.certs]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-pem.certs[quarkus.redis.tls.trust-certificate-pem.certs]`

[.description]
--
Comma-separated list of the trust certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-jks]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-jks[quarkus.redis.tls.trust-certificate-jks]`

[.description]
--
JKS config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-jks.path]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-jks.path[quarkus.redis.tls.trust-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-jks.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-jks.password[quarkus.redis.tls.trust-certificate-jks.password]`

[.description]
--
Password of the key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-pfx]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-pfx[quarkus.redis.tls.trust-certificate-pfx]`

[.description]
--
PFX config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-pfx.path]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-pfx.path[quarkus.redis.tls.trust-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-pfx.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.trust-certificate-pfx.password[quarkus.redis.tls.trust-certificate-pfx.password]`

[.description]
--
Password of the key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_TRUST_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pem]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pem[quarkus.redis.tls.key-certificate-pem]`

[.description]
--
PEM Key/cert config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pem.keys]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pem.keys[quarkus.redis.tls.key-certificate-pem.keys]`

[.description]
--
Comma-separated list of the path to the key files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PEM_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PEM_KEYS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pem.certs]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pem.certs[quarkus.redis.tls.key-certificate-pem.certs]`

[.description]
--
Comma-separated list of the path to the certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-jks]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-jks[quarkus.redis.tls.key-certificate-jks]`

[.description]
--
JKS config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-jks.path]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-jks.path[quarkus.redis.tls.key-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-jks.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-jks.password[quarkus.redis.tls.key-certificate-jks.password]`

[.description]
--
Password of the key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pfx]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pfx[quarkus.redis.tls.key-certificate-pfx]`

[.description]
--
PFX config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pfx.path]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pfx.path[quarkus.redis.tls.key-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pfx.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.key-certificate-pfx.password[quarkus.redis.tls.key-certificate-pfx.password]`

[.description]
--
Password of the key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_KEY_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.tls.hostname-verification-algorithm]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.tls.hostname-verification-algorithm[quarkus.redis.tls.hostname-verification-algorithm]`

[.description]
--
The hostname verification algorithm to use in case the server's identity should be checked. Should be HTTPS, LDAPS or an empty string.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS_TLS_HOSTNAME_VERIFICATION_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS_TLS_HOSTNAME_VERIFICATION_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.enabled]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.enabled[quarkus.redis."redis-client-name".tls.enabled]`

[.description]
--
Whether SSL/TLS is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-all]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-all[quarkus.redis."redis-client-name".tls.trust-all]`

[.description]
--
Enable trusting all certificates. Disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_ALL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_ALL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-pem]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-pem[quarkus.redis."redis-client-name".tls.trust-certificate-pem]`

[.description]
--
PEM Trust config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-pem.certs]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-pem.certs[quarkus.redis."redis-client-name".tls.trust-certificate-pem.certs]`

[.description]
--
Comma-separated list of the trust certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-jks]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-jks[quarkus.redis."redis-client-name".tls.trust-certificate-jks]`

[.description]
--
JKS config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-jks.path]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-jks.path[quarkus.redis."redis-client-name".tls.trust-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-jks.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-jks.password[quarkus.redis."redis-client-name".tls.trust-certificate-jks.password]`

[.description]
--
Password of the key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-pfx]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-pfx[quarkus.redis."redis-client-name".tls.trust-certificate-pfx]`

[.description]
--
PFX config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-pfx.path]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-pfx.path[quarkus.redis."redis-client-name".tls.trust-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-pfx.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.trust-certificate-pfx.password[quarkus.redis."redis-client-name".tls.trust-certificate-pfx.password]`

[.description]
--
Password of the key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_TRUST_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pem]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pem[quarkus.redis."redis-client-name".tls.key-certificate-pem]`

[.description]
--
PEM Key/cert config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PEM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PEM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pem.keys]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pem.keys[quarkus.redis."redis-client-name".tls.key-certificate-pem.keys]`

[.description]
--
Comma-separated list of the path to the key files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PEM_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PEM_KEYS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pem.certs]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pem.certs[quarkus.redis."redis-client-name".tls.key-certificate-pem.certs]`

[.description]
--
Comma-separated list of the path to the certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PEM_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PEM_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-jks]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-jks[quarkus.redis."redis-client-name".tls.key-certificate-jks]`

[.description]
--
JKS config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_JKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_JKS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-jks.path]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-jks.path[quarkus.redis."redis-client-name".tls.key-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_JKS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_JKS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-jks.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-jks.password[quarkus.redis."redis-client-name".tls.key-certificate-jks.password]`

[.description]
--
Password of the key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_JKS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_JKS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pfx]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pfx[quarkus.redis."redis-client-name".tls.key-certificate-pfx]`

[.description]
--
PFX config is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PFX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PFX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pfx.path]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pfx.path[quarkus.redis."redis-client-name".tls.key-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PFX_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PFX_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pfx.password]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.key-certificate-pfx.password[quarkus.redis."redis-client-name".tls.key-certificate-pfx.password]`

[.description]
--
Password of the key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PFX_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_KEY_CERTIFICATE_PFX_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.hostname-verification-algorithm]]`link:#quarkus-redis-client-config-redis-config_quarkus.redis.-redis-client-name-.tls.hostname-verification-algorithm[quarkus.redis."redis-client-name".tls.hostname-verification-algorithm]`

[.description]
--
The hostname verification algorithm to use in case the server's identity should be checked. Should be HTTPS, LDAPS or an empty string.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_HOSTNAME_VERIFICATION_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REDIS__REDIS_CLIENT_NAME__TLS_HOSTNAME_VERIFICATION_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
